// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays open nav or drawer 1`] = `
<div>
  Title
  <Main
    isMasked={false}
  >
    <Routes />
  </Main>
  <button
    onClick={[Function]}
  />
  <() => Promise.resolve().then(() => _interopRequireWildcard(require('../Navigation'))) />
  <ToastContainer />
</div>
`;

exports[`renders with renderErrors 1`] = `
<HeadProvider>
  <Title>
    Home Page - Venia
  </Title>
  <Main
    isMasked={true}
  />
  <Classify(Mask)
    isActive={true}
  />
  <ToastContainer />
</HeadProvider>
`;

exports[`renders with unhandledErrors 1`] = `
<HeadProvider>
  <Title>
    Home Page - Venia
  </Title>
  <Main
    isMasked={false}
  >
    <Routes />
  </Main>
  <Classify(Mask)
    dismiss={[Function]}
    isActive={false}
  />
  <React.Suspense
    fallback={null}
  >
    <() => Promise.resolve().then(() => _interopRequireWildcard(require('../Navigation'))) />
  </React.Suspense>
  <ToastContainer />
</HeadProvider>
`;
